--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>EstructuraHTML</title>
+    <meta name="author" content="Cecilia Carbajal Belmont" />
+    <meta name="description" content="Estructura de HTML" />
+
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <article>
+        <header>
+
+        </header>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
+    </article>
+    <div>
+        <aside>
+
+        </aside>
+        <aside>
+
+        </aside>
+    </div>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
